Fixed double tap to zoom on mobile view

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,4 +1,4 @@
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
   footer {
     width: 100%;
     height: 100px;
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
   }
-}
+} */
 footer {
   width: 100%;
   height: 100px;
