--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -11,7 +11,8 @@
     align-items: center;
   }
   main {
-    overflow: hidden
+    overflow: hidden;
+    touch-action: manipulation;
   }
   .the-cookie-mobile:hover, .the-cookie-mobile:active {
     transform: none;
